@@ -1,3 +1,10 @@
+2009-03-23  Dan Williams  <dcbw@redhat.com>
+
+	Patch from Ove Everlid <Ove.Everlid@sun.com>
+
+	* src/nm-openvpn-service-openvpn-helper.c
+		- (main): allow 'ifconfig_netmask' for TUN mode too
+
 2009-03-18  Dan Williams  <dcbw@redhat.com>
 
 	* properties/auth-helpers.c
